# Homer-Conferencing

./: .gitignore  INSTALL  OVERVIEW  README.md
Homer/: .cproject  .gitignore  .project  CMakeLists.txt  Makefile
Homer/forms/: .gitignore  AddNetworkSinkDialog.ui  AvailabilityWidget.ui  ConfigurationDialog.ui  ContactEditDialog.ui  FileTransferAckDialog.ui  HelpDialog.ui  IdentityDialog.ui  MainWindow.ui  (+14 more)
HomerBase/: .cproject  .cvsignore  .gitignore  .project  CMakeLists.txt  todo.txt
HomerBase/VisualStudio/: HomerBase.sln  HomerBase.vcxproj  HomerBase.vcxproj.filters
HomerBase/include/: HBCondition.h  HBMutex.h  HBRandom.h  HBReflection.h  HBSocket.h  HBSocketControlService.h  HBSocketQoSSettings.h  HBSystem.h  HBThread.h  HBTime.h  Header_Windows.h  HomerGLimits.h  in_ext.h  inet_ext.h  socket_ext.h
HomerBase/include/Logging/: LogSink.h  LogSinkConsole.h  LogSinkFile.h  LogSinkNet.h  Logger.h
HomerBase/libHomerBase/: .cvsignore  CMakeLists.txt
HomerBase/src/: HBCondition.cpp  HBMutex.cpp  HBRandom.cpp  HBReflection.cpp  HBSocket.cpp  HBSocketControlService.cpp  HBSystem.cpp  HBThread.cpp  HBTime.cpp
HomerBase/src/Logging/: LogSink.cpp  LogSinkConsole.cpp  LogSinkFile.cpp  LogSinkNet.cpp  Logger.cpp
HomerBuild/: .gitignore  .project  CMakeCPack.txt  CMakeCPackLinux.txt  CMakeCPackOSX.txt  CMakeCPackWin.txt  CMakeConfig.txt  CMakeCore.txt  CMakeLists.txt  CMakePreDefs.txt  CMakeVersioningApp.txt  CMakeVersioningLib.txt  CMakeWinResApp.txt  CMakeWinResLib.txt  MakeCore  Makefile
HomerBuild/config/: HomerFeatures.txt  HomerVersion.txt  config.h.in
HomerBuild/lib/: .gitignore
HomerBuild/resources/: Homer.rc.in  HomerLib.rc.in  Info.plist  OSXPreInstall  config.h.in
HomerBuild/resources/cmake_modules/: NSIS.template.in
HomerBuild/resources/osx/: Homer-Conferencing.icns  Info.plist.in  start_Homer-Conferencing
HomerBuild/resources/texts/: Homer-Welcome.txt  Homer-Welcome.txt.in  Readme.txt
HomerBuild/resources/windows/: Homer.rc.in  HomerLib.rc.in
HomerConference/: .cproject  .gitignore  .project  CMakeLists.txt  todo.txt
HomerConference/include/: Header_SofiaSip.h  Header_SofiaSipForwDecl.h  Meeting.h  MeetingEvents.h  PIDF.h  SDP.h  SIP.h  SIP_stun.h
HomerConference/libHomerConference/: CMakeLists.txt
HomerConference/src/: Meeting.cpp  MeetingEvents.cpp  PIDF.cpp  PIDF.txt  SDP.cpp  SDP.txt  SIP.cpp  SIP_stun.cpp  SIP_stun.txt
HomerGAPI/: .cproject  .gitignore  .project  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
HomerLibs/: .project
HomerMonitor/: .cproject  .cvsignore  .gitignore  .project  CMakeLists.txt  todo.txt
HomerMonitor/include/: PacketStatistic.h  PacketStatisticService.h  ProcessStatistic.h  ProcessStatisticService.h
HomerMonitor/libHomerMonitor/: .cvsignore  .gitignore  CMakeLists.txt
HomerMonitor/src/: PacketStatistic.cpp  PacketStatisticService.cpp  ProcessStatistic.cpp  ProcessStatisticService.cpp
HomerMultimedia/: .cproject  .gitignore  .project  CMakeLists.txt  build  todo.txt
HomerMultimedia/include/: Header_Alsa.h  Header_CoreAudio.h  Header_CoreVideo.h  Header_DirectShow.h  Header_Ffmpeg.h  Header_MMSys.h  Header_PortAudio.h  Header_PulseAudio.h  MediaFifo.h  MediaFilter.h  MediaSink.h  MediaSinkFile.h  MediaSinkMem.h  MediaSinkNet.h  MediaSource.h  MediaSourceAlsa.h  MediaSourceCoreAudio.h  MediaSourceCoreVideo.h  MediaSourceDShow.h  MediaSourceFile.h  MediaSourceMMSys.h  MediaSourceMem.h  MediaSourceMuxer.h  MediaSourceNet.h  MediaSourceOss.h  MediaSourcePortAudio.h  MediaSourcePulseAudio.h  MediaSourceV4L2.h  MediaSourceVFW.h  RTCP.h  RTP.h  VideoScaler.h  WaveOut.h  WaveOutPortAudio.h  WaveOutPulseAudio.h  WaveOutSdl.h
HomerMultimedia/libHomerMultimedia/: CMakeLists.txt
HomerMultimedia/resources/: BuildConfigHomerMultimedia.h.in
HomerMultimedia/src/: MediaFifo.cpp  MediaFilter.cpp  MediaSink.cpp  MediaSinkFile.cpp  MediaSinkMem.cpp  MediaSinkNet.cpp  MediaSource.cpp  MediaSourceAlsa.cpp  MediaSourceCoreAudio.cpp  MediaSourceCoreVideo.cpp  MediaSourceDShow.cpp  MediaSourceFile.cpp  MediaSourceMMSys.cpp  MediaSourceMem.cpp  MediaSourceMuxer.cpp  MediaSourceNet.cpp  MediaSourceOss.cpp  MediaSourcePortAudio.cpp  MediaSourcePulseAudio.cpp  MediaSourceV4L2.cpp  MediaSourceVFW.cpp  RTCP.cpp  RTP.cpp  RTP.txt  VideoScaler.cpp  WaveOut.cpp  WaveOutPortAudio.cpp  WaveOutPulseAudio.cpp  WaveOutSdl.cpp
HomerNAPI/: .cproject  .project  CMakeLists.txt
HomerNetworkNG/: .cproject  .project  CMakeLists.txt
HomerNetworkNG/include/: NGNFroggerMSG.h  NGNParseNetworkRequirment.h  NGNSocketBinding.h  NGNSocketConnection.h  NGNSocketName.h
HomerNetworkNG/libHomerNetworkNG/: CMakeLists.txt
HomerNetworkNG/src/: NGNSocketBinding.cpp  NGNSocketConnection.cpp  NGNSocketName.cpp  NGNSocketSetup.cpp
HomerNetworkSimulator/: .cproject  .project  CMakeLists.txt
HomerNetworkSimulator/forms/Widgets/: OverviewNetworkSimulationWidget.ui
HomerNetworkSimulator/include/: NetworkSimulator.h
HomerNetworkSimulator/include/Core/: Cep.h  ChannelBinding.h  ChannelConnection.h  ChannelName.h  ChannelSetup.h  Coordinator.h  Domain.h  DomainNameService.h  Link.h  Node.h  Scenario.h
HomerNetworkSimulator/include/Widgets/: OverviewNetworkSimulationWidget.h
HomerNetworkSimulator/libHomerNetworkSimulator/: CMakeLists.txt
HomerNetworkSimulator/src/: NetworkSimulator.cpp
HomerNetworkSimulator/src/Core/: Cep.cpp  ChannelBinding.cpp  ChannelConnection.cpp  ChannelName.cpp  ChannelSetup.cpp  Coordinator.cpp  Domain.cpp  DomainNameService.cpp  Link.cpp  Node.cpp  Scenario.cpp
HomerNetworkSimulator/src/Widgets/: OverviewNetworkSimulationWidget.cpp
HomerSoundOutput/: .cproject  .cvsignore  .gitignore  .project  CMakeLists.txt  build  todo.txt
HomerSoundOutput/include/: AudioOutSdl.h  Header_Alsa.h  Header_MMSys.h  Header_PortAudio.h  Header_SdlMixer.h  WaveOut.h  WaveOutAlsa.h  WaveOutMMSys.h  WaveOutPortAudio.h
HomerSoundOutput/libHomerSoundOutput/: .cvsignore  .gitignore  CMakeLists.txt
HomerSoundOutput/src/: AudioOutSdl.cpp  WaveOut.cpp  WaveOutAlsa.cpp  WaveOutMMSys.cpp  WaveOutPortAudio.cpp
(+264 files in other folders)
