###############################################################################
# CMakeLists for HomerBase
# Author:  Thomas Volkert
# Since:   2010-11-13
# Version: $Id: CMakeLists.txt 6 2011-08-22 13:06:22Z silvo $
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerBase)
ADD_SUBDIRECTORY(libHomerBase)

