###############################################################################
# CMakeLists for HomerConference
# Author:  Thomas Volkert
# Since:   2011-02-19
# Version: $Id: CMakeLists.txt,v 1.1 2011/02/19 14:29:49 chaos Exp $
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerConference)
ADD_SUBDIRECTORY(libHomerConference)

