###############################################################################
# CMakeLists for HomerConference
# Author:  Thomas Volkert
# Since:   2011-02-19
# Version: $Id$
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerConference)
ADD_SUBDIRECTORY(libHomerConference)

