###############################################################################
# CMakeLists for HomerMONITOR
# Author:  Thomas Volkert
# Since:   2010-11-13
# Version: $Id: CMakeLists.txt 14 2011-08-22 13:18:27Z silvo $
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerMonitor)
ADD_SUBDIRECTORY(libHomerMonitor)
