###############################################################################
# CMakeLists for HomerMONITOR
# Author:  Thomas Volkert
# Since:   2010-11-13
# Version: $Id$
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerMonitor)
ADD_SUBDIRECTORY(libHomerMonitor)
