###############################################################################
# Author:  Thomas Volkert
# Since:   2010-11-13
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerMonitor)
ADD_SUBDIRECTORY(libHomerMonitor)
