###############################################################################
# CMakeLists for HomerMultimedia
# Author:  Thomas Volkert
# Since:   2011-02-19
# Version: $Id: CMakeLists.txt,v 1.1 2011/02/19 22:11:24 chaos Exp $
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerMultimedia)
ADD_SUBDIRECTORY(libHomerMultimedia)
