###############################################################################
# Author:  Thomas Volkert
# Since:   2012-06-10
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerNetworkNG)
ADD_SUBDIRECTORY(libHomerNetworkNG)

