###############################################################################
# Author:  Thomas Volkert
# Since:   2012-05-31
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerNetworkSimulator)
ADD_SUBDIRECTORY(libHomerNetworkSimulator)

