###############################################################################
# CMakeLists for HomerSoundOutput
# Author:  Thomas Volkert
# Since:   2011-02-19
# Version: $Id: CMakeLists.txt 11 2011-08-22 13:15:28Z silvo $
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerSoundOutput)
ADD_SUBDIRECTORY(libHomerSoundOutput)

