###############################################################################
# CMakeLists for HomerSoundOutput
# Author:  Thomas Volkert
# Since:   2011-02-19
# Version: $Id$
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerSoundOutput)
ADD_SUBDIRECTORY(libHomerSoundOutput)

