###############################################################################
# Author:  Thomas Volkert
# Since:   2011-02-19
###############################################################################

cmake_minimum_required (VERSION 2.6)
PROJECT(HomerSoundOutput)
ADD_SUBDIRECTORY(libHomerSoundOutput)

